# Folip

./: .gitignore  CLAUDE.md  README.md  README_zh-CN.md
functions/: .env.example  .gitignore  build.mjs  package-lock.json  package.json  s.yaml  s.yaml.template  tsconfig.json
functions/scripts/: smoke-test.mjs
functions/src/: index.ts
functions/src/lib/: jwt.ts  oss.ts  tablestore.ts
functions/src/middleware/: auth.ts
functions/src/routes/: auth.ts  devices.ts  transfers.ts
functions/src/types/: index.ts
mac/: index.html  package-lock.json  package.json  vite.config.ts
mac/src/: App.tsx  main.tsx
mac/src-tauri/: Cargo.toml  tauri.conf.json
mac/src-tauri/capabilities/: default.json
mac/src-tauri/icons/: icon.icns
mac/src-tauri/src/: api_client.rs  credentials.rs  lib.rs  main.rs
mac/src-tauri/src/commands/: auth.rs  devices.rs  inbox.rs  mod.rs  transfer.rs
mac/src/components/: DeviceSelector.tsx  DropZone.tsx  FileItem.tsx  InboxView.tsx  LoginView.tsx  ProgressBar.tsx  RegisterView.tsx  SendView.tsx  SettingsView.tsx
mac/src/hooks/: useAuth.ts  useDevices.ts  useInbox.ts  useUpload.ts
mac/src/lib/: api.ts
mac/src/styles/: globals.css
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/app/: main.dart  router.dart  theme.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  (+1 more)
(+38 files in other folders)
